--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://pet-social-do-user-14931412-0.c.db.ondigitalocean.com:25060/petsocial
 #spring.datasource.url=jdbc:mysql://localhost:3306/petsocial
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_lmTA1_CO3TB1kJZtx-G
 #spring.datasource.username=root
