--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
-#spring.datasource.url=jdbc:mysql://pet-social-do-user-14931412-0.c.db.ondigitalocean.com:25060/petsocial
-spring.datasource.url=jdbc:mysql://localhost:3306/petsocial
+spring.datasource.url=jdbc:mysql://pet-social-do-user-14931412-0.c.db.ondigitalocean.com:25060/petsocial
+#spring.datasource.url=jdbc:mysql://localhost:3306/petsocial
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=doadmin
-#spring.datasource.password=AVNS_lmTA1_CO3TB1kJZtx-G
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_lmTA1_CO3TB1kJZtx-G
+#spring.datasource.username=root
+#spring.datasource.password=12345
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -47,5 +47,5 @@ paypal.client.secret=EP4aHzT3DbG2zb61D0E2MTgYQKlpvJJGSBkZPKEjP762LcHfyYw33BXjLNz
 
 #fronturl=http://103.253.147.216
 #baseurl=https://petsocial.azurewebsites.net
-baseurl=http://localhost:8080
-fronturl=http://localhost:3000
+baseurl=https://petsocial.azurewebsites.net
+fronturl=http://103.253.147.216
